# python-mysql-replication

./: .gitignore  README.md
pmr-backend-api/: pyproject.toml
pmr-backend-api/src/: main.py
pmr-backend-api/src/common/: logger.py  setting.py
pmr-backend-api/src/database/: session.py
sql/: pmr-create-tables.sql
