[tool.poetry]
name = "pmr-backend-api"
version = "0.1.0"
description = ""
authors = ["Taesoo Lim <limtsoo.shina@gmail.com>"]
packages = [{ from = "src", include = "*" }]

[tool.poetry.dependencies]
python = "3.10.14"

### COMMON
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
python-dotenv = "1.0.1"

### LIBRARY
# WEB Framework
fastapi = { version = "0.115.0", optional = true }
gunicorn = { version = "23.0.0", optional = true }
uvicorn = { version = "0.31.0", optional = true }
# RDBMS (mariadb)
sqlalchemy = { version = "2.0.35", optional = true }
asyncmy = { version = "0.2.9", optional = true }
greenlet = { version = "3.1.1", optional = true }

[tool.poetry.extras]
api = ["fastapi", "gunicorn", "uvicorn"]
rdbms = ["sqlalchemy", "asyncmy", "greenlet"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["core"]
